# kernel-mapper

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  WIRING_STATUS.md  context.md  kernelcanvas_claude_code_opus_prompt.md  learnings.md  package-lock.json  package.json  repo-governance-master-prompt.md
prisma/: schema.prisma
src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/dashboard/: page.tsx
src/app/api/ai/: route.ts
src/app/api/projects/: route.ts
src/app/api/schemas/: route.ts
src/app/dashboard/: page.tsx
src/app/projects/[id]/: layout.tsx
src/app/settings/: page.tsx
src/cli/: mod.rs
src/components/: providers.tsx
src/components/graph/: graph-canvas.tsx  node-palette.tsx
src/components/layout/: app-shell.tsx  bottom-panel.tsx  header.tsx  left-panel.tsx  right-panel.tsx
src/components/wizard/: create-wizard.tsx  generation-preview.tsx  option-card.tsx  wizard-step.tsx
src/lib/: prisma.ts
src/lib/ai/: openrouter-provider.ts  prompts.ts  task-router.ts  tools.ts  types.ts
src/lib/codegen/: c-header-generator.ts  engine.ts  kernel-scaffold-generator.ts  markdown-generator.ts  schema-json-generator.ts  ts-client-generator.ts  types.ts  utils.ts
src/lib/validation/: abi-validator.ts  engine.ts  quality-validator.ts  schema-validator.ts  security-validator.ts  types.ts  wiring-validator.ts
src/parser/: c_source.rs  kconfig.rs  makefile.rs  mod.rs
src/storage/: mod.rs
src/stores/: graph-store.ts  project-store.ts  ui-store.ts
src/types/: api.ts  domain.ts  graph.ts
(+20 files in other folders)
