[package]
name = "kmap"
version = "0.1.0"
edition = "2021"
description = "Parse and query Linux kernel source internals"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
tree-sitter = "0.22"
tree-sitter-c = "0.21"
rayon = "1.10"
walkdir = "2"
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
indicatif = { version = "0.17", features = ["rayon"] }
