[package]
name = "kmap"
version = "0.1.0"
edition = "2021"
description = "Parse and query Linux kernel source internals"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-c = "0.21"
rayon = "1.10"
walkdir = "2"
anyhow = "1"
regex = "1"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
